kyberkucharka-frontend/src/styles/cards.css
.card-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
}

.card {
  background-image: url("/stickers/sticker-yellow.png");
  background-size: cover;
  background-repeat: no-repeat;
  opacity: 0.95;

  padding: 48px;
  padding-top: 30px;
  padding-bottom: 40px;

  display: flex;
  flex-direction: column;
  justify-content: space-evenly;

  color: #1a1a1a;
  text-shadow: 0px 0px calc(2px * var(--main-recipe-size)) #2a2a2a;
  align-items: center;
}

.card > div {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;

  height: calc(326px * var(--card-size));
  width: calc(300px * var(--card-size));
  font-size: calc(20px * var(--card-size));
}


.card:nth-child(5n + 1) {
  background-image: url("/stickers/sticker-orange.png");
  transform: rotate(-0.5deg) translateX(-2px);
}

.card:nth-child(5n + 2) {
  background-image: url("/stickers/sticker-pink.png");
  transform: rotate(2deg) translateX(5px);
}

.card:nth-child(5n + 3) {
  background-image: url("/stickers/sticker-yellow.png");
  transform: rotate(-0.5deg);
}

.card:nth-child(5n + 4) {
  background-image: url("/stickers/sticker-blue.png");
  transform: rotate(1deg) translateX(5px);
}

.card:nth-child(5n + 5) {
  background-image: url("/stickers/sticker-lime.png");
  transform: rotate(-1deg) translateX(-5px);
}

.card:hover {
  color: #1a1a1a;
  transform: rotate(0deg);
}

.card *,
.fork-card * {
  margin: 0;
}

.card h3,
.fork-card h3 {
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.card img,
.fork-card img {
  display: block;
  box-shadow: 2px 2px 8px black;
  opacity: 1;
}

.card img {
  height: calc(150px * var(--card-size));
  max-width: calc(250px * var(--card-size));
  margin: calc(10px * var(--card-size)) auto;

  object-fit: cover;

  transform: rotate(-2.5deg);
}

.fork-card img {
  height: calc(150px * var(--fork-card-size));
  max-width: calc(250px * var(--fork-card-size));
  margin: calc(10px * var(--fork-card-size)) auto;

  object-fit: cover;

  transform: rotate(2deg);
}

.card p,
.fork-card p {
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

.card p {
  max-height: calc(100px * var(--card-size));
}

.fork-card p {
  max-height: calc(100px * var(--fork-card-size ));
}

/* FORK */
.fork {
  margin-right: 15%;
  display: block;

  background-image: url("/fork-link.png");
  background-position: right;
  background-size: 1500px;
  background-repeat: no-repeat;
}

.fork-card {
  margin-right: 8px;
  margin-left: auto;

  padding: calc(52px * var(--fork-card-size));
  padding-top: calc(36px * var(--fork-card-size));
  padding-bottom: calc(40px * var(--fork-card-size));

  padding-right: calc(40px * var(--fork-card-size));
  padding-left: calc(40px * var(--fork-card-size));

  display: flex;
  flex-direction: column;
  justify-content: space-evenly;

  height: calc(326px * var(--fork-card-size));
  width: calc(300px * var(--fork-card-size));
  font-size: calc(20px * var(--fork-card-size));

  color: #1a1a1a;
  text-shadow: 0px 0px calc(2px * var(--main-recipe-size)) #2a2a2a;
  align-items: center;

  transform: rotate(1.5deg);
}

.fork-card:hover {
  color: #1a1a1a;
  transform: rotate(1.5deg);
}

.fork:hover {
  transform: rotate(0.5deg) translateY(-3px);
}

.flex-column {
  flex-direction: column;
  justify-content: start;
  align-items: center;
}

@media only screen and (max-width: 1650px) {
  .flex-column {
    flex-direction: row;
    justify-content: space-between;
  }
}

@media only screen and (max-width: 600px) {
  .fork {
    margin-right: 0%;
  }
}

